[gd_scene load_steps=6 format=3 uid="uid://cjnd0n0oev3cy"]

[ext_resource type="Script" path="res://Prefabs/Alien/Alien.gd" id="1_277d3"]
[ext_resource type="SpriteFrames" path="res://Prefabs/Alien/Sprites/AlienAnimations.tres" id="3_45jay"]
[ext_resource type="Script" path="res://Prefabs/Alien/GunSprite.gd" id="4_jekhc"]
[ext_resource type="Texture2D" uid="uid://8x7yinyohkik" path="res://Lights/LightGradient.png" id="4_lgycb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebuqj"]
size = Vector2(11, 8)

[node name="Alien_2" type="RigidBody2D" groups=["Aliens"]]
collision_layer = 2
collision_mask = 3
gravity_scale = 0.0
max_contacts_reported = 2
contact_monitor = true
lock_rotation = true
freeze = true
freeze_mode = 1
script = ExtResource("1_277d3")
ReloadSecMax = 5.0

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_45jay")
animation = &"Alien1"
metadata/playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ebuqj")
one_way_collision_margin = 0.0

[node name="GunPosition" type="Marker2D" parent="."]
position = Vector2(0, 3)

[node name="GunSprite" type="PointLight2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.04, 0.04)
color = Color(1, 0.427451, 0.435294, 1)
energy = 1.2
blend_mode = 2
texture = ExtResource("4_lgycb")
script = ExtResource("4_jekhc")
